[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simple-ros2-processing-tools"
description = "A set of simple tools for ROS2."
authors = [{name="Katsuya Hyodo", email="rmsdh122@yahoo.co.jp"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.10"
dependencies = [
    "rosimg2mp4",
    "rosdepth2mp4",
    "ros2bagcut",
    "ros2bagsend",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PINTO0309/simple-ros2-processing-tools"

[tool.setuptools.packages.find]
exclude = ["build", "tests"]

[tool.setuptools.dynamic]
version = {attr = "simple-ros2-processing-tools.version"}

[tool.setuptools_scm]
write_to = "simple-ros2-processing-tools/_version.py"
